--- a/src/Nutcache.WebUI/Nutcache.WebUI.csproj
+++ b/src/Nutcache.WebUI/Nutcache.WebUI.csproj
@@ -7,6 +7,7 @@
     <UserSecretsId>f00b675b-7ca6-48df-a37b-5fa5dc617a5f</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerfileContext>..\..</DockerfileContext>
+    <DockerComposeProjectPath>..\..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
   <ItemGroup>
